# kq-lmpc-quadrotor

./: LICENSE  README.MD  acados_ocp_quad_lpv.json  acados_ocp_quad_nl.json  pyproject.toml  setup.cfg
MATLAB/: KoopMan_Lifting.html  KoopMan_Lifting.mlx  README.md
MATLAB/Koop_Quad/: KoopmanLift.m  UtilsFunctions.m  quad_params.m
c_generated_code/: Makefile  acados_sim_solver_quad_lpv.c  acados_sim_solver_quad_lpv.h  acados_sim_solver_quad_nl.c  acados_sim_solver_quad_nl.h  acados_solver.pxd  acados_solver_quad_lpv.c  acados_solver_quad_lpv.h  acados_solver_quad_nl.c  acados_solver_quad_nl.h  main_quad_lpv.c  main_quad_nl.c  main_sim_quad_lpv.c  main_sim_quad_nl.c
c_generated_code/quad_lpv_cost/: quad_lpv_cost.h  quad_lpv_cost_ext_cost_0_fun.c  quad_lpv_cost_ext_cost_0_fun_jac.c  quad_lpv_cost_ext_cost_0_fun_jac_hess.c  quad_lpv_cost_ext_cost_e_fun.c  quad_lpv_cost_ext_cost_e_fun_jac.c  quad_lpv_cost_ext_cost_e_fun_jac_hess.c  quad_lpv_cost_ext_cost_fun.c  quad_lpv_cost_ext_cost_fun_jac.c  quad_lpv_cost_ext_cost_fun_jac_hess.c
c_generated_code/quad_lpv_model/: quad_lpv_expl_ode_fun.c  quad_lpv_expl_vde_adj.c  quad_lpv_expl_vde_forw.c  quad_lpv_model.h
c_generated_code/quad_nl_cost/: quad_nl_cost.h  quad_nl_cost_ext_cost_0_fun.c  quad_nl_cost_ext_cost_0_fun_jac.c  quad_nl_cost_ext_cost_0_fun_jac_hess.c  quad_nl_cost_ext_cost_e_fun.c  quad_nl_cost_ext_cost_e_fun_jac.c  quad_nl_cost_ext_cost_e_fun_jac_hess.c  quad_nl_cost_ext_cost_fun.c  quad_nl_cost_ext_cost_fun_jac.c  quad_nl_cost_ext_cost_fun_jac_hess.c
c_generated_code/quad_nl_model/: quad_nl_expl_ode_fun.c  quad_nl_expl_vde_adj.c  quad_nl_expl_vde_forw.c  quad_nl_model.h
examples/: MPC_Script.py  MPC_Script_notebook.py  kqlmpc_demo.py  lqr_demo.py  lqr_demo_notebook.py
examples/Notebooks/: koopman_lifting.ipynb  quick_demo.ipynb
kq_lmpc_quadrotor/: QuadrotorKoopman.py  __init__.py  kqlmpc_demo.py  lqr_demo.py
kq_lmpc_quadrotor/Utils/: Dynamics.py  Reference_Generator_DFB.py  __init__.py  lqr_utils.py  quadrotor_util.py
(+7 files in other folders)
