[metadata]
name = kq_lmpc_quadrotor
version = 1.1.2
author = Santosh Rajkumar
description = Analytical Koopman-based data-free lifting and Linear MPC (KQ-LMPC) for quadrotor dynamics on SE(3)
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://santoshrajkumar.github.io
project_urls =
    Documentation = https://github.com/santoshrajkumar/kq-lmpc-quadrotor
    Video Demos = https://soarpapers.github.io/
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    Koopman operator
    model predictive control
    linear MPC
    quadrotor
    SE(3)
    robotics
    control theory
    real-time control
    dynamical systems
    data-free Koopman
    KQ-LMPC

[options]
packages = find:
python_requires = >=3.8
install_requires =
    sys
    os
    numpy
    scipy
    casadi
    matplotlib

[options.package_data]
* = *.txt, *.md

[options.entry_points]
console_scripts =
    lqr_demo = kq_lmpc_quadotor.demo.lqr_demo:main

